test/files/neg/macro-invalidusage-methodvaluesyntax.check
Macros_Test_2.scala:7: error: macros cannot be eta-expanded
  val firstClassFoo = Macros.foo _
                             ^
1 error
